@@ -120,6 +120,9 @@ Quits downloading lyrics of a song after the timeout of NUM seconds is reached.
 .TP
 .B jump\-prefix\-only = yes|no
 When using the jump command, search for the prefix of an entry. That means typing "m" will start to the first entry which begins with "m".
+.TP
+.B lyrics\-autosave = yes|no
+Automatically save lyrics after receiving them.
 .SS Display
 .TP
 .B welcome\-screen\-list = yes|no
